
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'org.springframework.boot'



group 'com.greatwall.alipayCreditPay1'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

buildscript {
    ext {
        springBootVersion = "2.0.9.RELEASE"
    }
    repositories {
        mavenLocal()
        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

repositories {
    mavenLocal()
    maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-undertow')
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

    compile group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.0.7.1'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.3'
    //compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.6.2'

    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
    //compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
    //compile group: 'net.sf.json-lib', name: 'json-lib', version: '2.4', classifier: 'jdk15'
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    compile group: "mysql", name: "mysql-connector-java", version: "6.0.6"
    //swagger2
    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
    //swagger-ui
    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

    compile fileTree(dir: 'localLibs', includes: ['*.jar'])

    testCompile group: 'junit', name: 'junit', version: '4.12'

    compileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
}

configurations {
    compile.exclude module: 'spring-boot-starter-tomcat'
}

def directory = 'build/alipayCreditPay/'

bootJar {
    launchScript()
}

task copyConfig(type:Copy) {
    from 'src/main/resources'
    into directory
}

task copyJar(type:Copy, dependsOn:bootJar) {
    from 'build/libs/'
    into directory
}

// 设置编译时的编码
tasks.withType(JavaCompile) { options.encoding = "UTF-8" }

// 设置Javadoc的编码
tasks.withType(Javadoc) { options.encoding = 'UTF-8' }


version '1.0'

// 打压缩包,发布版本
task release(type:Zip, dependsOn:[clean, copyJar, copyConfig]) {
    from directory
    archiveName 'alipayCreditPay1.zip'
}